fix homepage ie11 overflow fix export notice bar 100%

--- a/css/style.css
+++ b/css/style.css
@@ -1364,7 +1364,7 @@ input[type='checkbox'][disabled] +label {
 }
 
 .export_content_div {
-	
+	width: 100%;
 }
 
 .export_pieces_div {
